--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -25,6 +25,29 @@
           color: c.$color-white;
           font-weight: bold;
           font-size: 22px;
+
+          &:hover {
+            color: c.$color-blue-light;
+          }
+        }
+    }
+}
+
+@media (min-width: 768px){
+    .header {
+        padding: 20px 40px;
+
+        img {
+            max-width: 100px;
+        }
+
+        nav {
+
+            gap: 30px;
+            a {
+                font-size: 24px;
+                
+            }
         }
     }
 }
