Troquei algumas estilizações para os mixins

--- a/src/Pages/Contatos/Contatos.module.scss
+++ b/src/Pages/Contatos/Contatos.module.scss
@@ -1,13 +1,11 @@
 
 @use "../../styles/colors" as c;
+@use "../../styles/mixins" as m;
 
 .contatos {
     width: 100%;
     min-height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    @include m.flex-center-column;
     gap: 15px;
     padding: 20px 10px 0 10px;
 
