--- a/src/Components/Container/Container.module.scss
+++ b/src/Components/Container/Container.module.scss
@@ -1,10 +1,10 @@
 
+@use "../../styles/mixins" as m;
+
 .container {
     width: 100%;
     min-height: 90vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include m.flex-column-align-center;
     padding-block: 29px;
     gap: 16px;
 }
