--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -1,5 +1,7 @@
+
 @use "../../styles/colors" as c;
 @use "../../styles/mixins" as m;
+
 
 .sobre {
     width: 100%;
@@ -18,10 +20,8 @@
         }
 
         .textos {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
+            @include m.flex-column-align-center;
+            @include m.text-align(center);
             gap: 1rem;
 
             h2 {
