--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -6,6 +6,12 @@
     justify-content: center;
 }
 
+@mixin flex-column-align-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @mixin text-align($align){
     text-align: $align;
 }
