--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -11,7 +11,7 @@
 
     .content {
         @include m.flex-center-column;
-        gap: 1.5rem;
+        gap: 24px;
 
         img {
             width: 100%;
@@ -22,7 +22,7 @@
         .textos {
             @include m.flex-column-align-center;
             @include m.text-align(center);
-            gap: 1rem;
+            gap: 16px;
 
             h2 {
                 font-size: 24px;
@@ -33,7 +33,7 @@
 
             p {
                 font-size: 16px;
-                line-height: 1.5rem;
+                line-height: 24px;
                 padding: 0 15px;
             }
         }
