--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -10,6 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    top: 0;
 
     img {
         max-width: 80px;
