--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -6,7 +6,9 @@
     min-height: 90vh;
     @include m.flex-center-column;
     @include m.text-align(center);
-    padding: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 70px;
     gap: 24px;
 
     .apresentacao {
@@ -61,3 +63,21 @@
         }
     }
 }
+
+@media (min-width: 768px) {
+    .home {
+        padding-top: 200px;
+
+        .apresentacao {
+            p {
+                font-size: 32px;
+            }
+            span {
+                font-size: 32px;
+            }
+        }
+
+    }
+}
+
+
