--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -2,66 +2,66 @@
 @use "../../styles/mixins" as m;
 
 .home {
-    width: 100%;
-    min-height: 90vh;
-    @include m.flex-center-column;
-    @include m.text-align(center);
-    padding-right: 20px;
-    padding-left: 20px;
-    padding-top: 70px;
-    gap: 24px;
+  width: 100%;
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
+  gap: 40px;
+  padding: 70px 40px;
 
-    .apresentacao {
-        p {
-            font-size: 32px;
-            font-weight: bold;
-            margin-bottom: 16px;
-        }
+  .apresentacao {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
 
-        span {
-            color: c.$color-primary;
-        }
+    p {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 16px;
+  }
+
+  span {
+    color: c.$color-primary;
+  }
+  }
+
+  .btn {
+    width: 250px;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bold;
+    border: 0;
+    border-radius: 7px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+  }
+
+  .btn_blue {
+    background-color: c.$color-primary;
+    color: c.$color-white;
+
+    &:hover {
+      background-color: c.$color-blue-light;
     }
+  }
 
-    .btn {
-        width: 80%;
-        max-width: 250px;
-        height: 45px;
-        font-size: 18px;
-        font-weight: bold;
-        border: 0;
-        border-radius: 7px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 10px auto 0 auto;
-        text-decoration: none;
+  figure {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+      max-width: 500px;
+      height: auto;
     }
-
-    .btn_red {
-        background-color: c.$color-primary;
-        color: c.$color-white;
-
-        &:hover {
-            background-color: c.$color-blue-light;
-        }
-    }
-
-    figure {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        img {
-            width: 90%;
-            max-width: 400px;
-            height: auto;
-            display: block;
-            margin-bottom: 16px;
-        }
-    }
+  }
 }
-
 
