--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -1,41 +1,59 @@
-
 @use "../../styles/colors" as c;
 @use "../../styles/mixins" as m;
 
 
 .sobre {
     width: 100%;
-    min-height: 85vh;
-    @include m.flex-center-column;
+    min-height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 10px 10px 40px;
 
     .content {
-        @include m.flex-center-column;
+        display: flex;
+        align-items: center;
         gap: 24px;
 
-        img {
-            width: 100%;
-            height: auto;
-            max-width: 300px;
-        }
-
-        .textos {
-            @include m.flex-column-align-center;
-            @include m.text-align(center);
-            gap: 16px;
-
-            h2 {
-                font-size: 24px;
-                background-color: c.$color-secondary;
-                color: c.$color-white;
-                padding: 8px 16px;
-            }
-
-            p {
-                font-size: 16px;
-                line-height: 24px;
-                padding: 0 15px;
-            }
-        }
+         img {
+        width: 100%;
+        height: auto;
+        max-width: 300px;
     }
+    }
+
+    
+
+   
+
+    // .content {
+    //     @include m.flex-center-column;
+    //     gap: 24px;
+
+    //     img {
+    //         width: 100%;
+    //         height: auto;
+    //         max-width: 300px;
+    //     }
+
+    //     .textos {
+    //         @include m.flex-column-align-center;
+    //         @include m.text-align(center);
+    //         gap: 16px;
+
+    //         h2 {
+    //             font-size: 24px;
+    //             background-color: c.$color-secondary;
+    //             color: c.$color-white;
+    //             padding: 8px 16px;
+    //         }
+
+    //         p {
+    //             font-size: 16px;
+    //             line-height: 24px;
+    //             padding: 0 15px;
+    //         }
+    //     }
+    // }
 }
