--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -9,7 +9,9 @@
   justify-content: space-evenly;
 
   img {
-    height: 350px;
+    width: 100%;
+    max-width: 350px;
+    height: auto;
   }
 
   p {
