--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -16,44 +16,29 @@
         align-items: center;
         gap: 24px;
 
-         img {
-        width: 100%;
-        height: auto;
-        max-width: 300px;
+        img {
+            width: 100%;
+            height: auto;
+            max-width: 300px;
+        }
+
+        .textos {
+            @include m.flex-column-align-center;
+            @include m.text-align(center);
+            gap: 16px;
+
+            h2 {
+                font-size: 24px;
+                background-color: c.$color-secondary;
+                color: c.$color-white;
+                padding: 8px 16px;
+            }
+
+            p {
+                font-size: 16px;
+                line-height: 24px;
+                padding: 0 15px;
+            }
+        }
     }
-    }
-
-    
-
-   
-
-    // .content {
-    //     @include m.flex-center-column;
-    //     gap: 24px;
-
-    //     img {
-    //         width: 100%;
-    //         height: auto;
-    //         max-width: 300px;
-    //     }
-
-    //     .textos {
-    //         @include m.flex-column-align-center;
-    //         @include m.text-align(center);
-    //         gap: 16px;
-
-    //         h2 {
-    //             font-size: 24px;
-    //             background-color: c.$color-secondary;
-    //             color: c.$color-white;
-    //             padding: 8px 16px;
-    //         }
-
-    //         p {
-    //             font-size: 16px;
-    //             line-height: 24px;
-    //             padding: 0 15px;
-    //         }
-    //     }
-    // }
 }
