--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -9,9 +9,7 @@
   justify-content: space-evenly;
 
   img {
-    width: 100%;
-    max-width: 350px;
-    height: auto;
+    height: 350px;
   }
 
   p {
@@ -48,60 +46,26 @@
   }
 }
 
-// .home {
-//   width: 100%;
-//   min-height: 90vh;
-//   display: flex;
-//   align-items: center;
-//   justify-content: space-between;
-//   text-align: left;
-//   gap: 40px;
-//   padding: 70px 40px;
+@media (max-width: 768px){
+  .home {
+    flex-direction: column;
 
-//     p {
-//     font-size: 48px;
-//     font-weight: bold;
-//     margin-bottom: 16px;
-//   }
+    img {
+      height: 300px;
+    }
+  }
+}
 
-//   span {
-//     color: c.$color-primary;
-//   }
-//   }
+@media (max-width: 480px){
+  .home {
+    p {
+      font-size: 32px;
+    }
 
-//   .btn {
-//     width: 250px;
-//     height: 50px;
-//     font-size: 18px;
-//     font-weight: bold;
-//     border: 0;
-//     border-radius: 7px;
-//     cursor: pointer;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     text-decoration: none;
-//   }
-
-//   .btn_blue {
-//     background-color: c.$color-primary;
-//     color: c.$color-white;
-
-//     &:hover {
-//       background-color: c.$color-blue-light;
-//     }
-//   }
-
-//   figure {
-//     flex: 1;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-
-//     img {
-//       width: 100%;
-//       max-width: 500px;
-//       height: auto;
-//     }
-//   }
-// }
+    img {
+      max-width: 100%;
+      height: auto;
+      padding-inline: 15px;
+    }
+  }
+}
