--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 10px 10px 40px;
+     padding: 20px 20px 40px;
 
     .content {
         display: flex;
@@ -28,17 +28,32 @@
             gap: 16px;
 
             h2 {
-                font-size: 24px;
+                font-size: 32px;
                 background-color: c.$color-secondary;
                 color: c.$color-white;
                 padding: 8px 16px;
             }
 
             p {
-                font-size: 16px;
-                line-height: 24px;
+                font-size: 22px;
+                line-height: 32px;
                 padding: 0 15px;
             }
         }
     }
 }
+
+@media (max-width: 768px){
+    .sobre {
+        .content{
+            flex-direction: column;
+            padding-inline: 28px;
+            gap: 16px;
+
+            img {
+                max-width: 50%;
+            }
+        }
+    }
+}
+
