--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -42,6 +42,7 @@
 
 @media (max-width: 768px){
     .sobre {
+        padding-bottom: 40px;
         .content{
             flex-direction: column;
             padding-inline: 28px;
@@ -49,7 +50,6 @@
 
             img {
                 max-width: 50%;
-                padding-top: 10px;
             }
         }
     }
