--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -6,8 +6,8 @@
     width: 100%;
     min-height: 90vh;
     @include m.flex-center-column;
-     padding: 20px 20px 40px;
-     padding-bottom: 40px;
+    //  padding: 20px 20px 40px;
+     padding-block: 40px;
 
     .content {
         display: flex;
