--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -12,10 +12,11 @@
     height: 350px;
   }
 
-  p {
-    font-size: 48px;
+  h1 {
+    font-size: 32px;
     font-weight: bold;
     margin-bottom: 16px;
+    line-height: 1.2;
   }
 
   span {
@@ -56,8 +57,9 @@
 
 @media (max-width: 480px){
   .home {
-    p {
-      font-size: 32px;
+    h1 {
+      font-size: 20px;
+      line-height: 1.3;
     }
 
     img {
