--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -24,8 +24,9 @@
             @include m.text-align(center);
             gap: 16px;
 
-            h2 {
+            h1 {
                 font-size: 32px;
+                line-height: 1.2;
                 background-color: c.$color-secondary;
                 color: c.$color-white;
                 padding: 8px 16px;
@@ -52,5 +53,19 @@
             }
         }
     }
+}
+
+@media (max-width: 480px) {
+  .sobre {
+    h1 {
+      font-size: 20px;
+      line-height: 1.3;
+    }
+
+    p {
+      font-size: 14px;
+      line-height: 1.5;
+    }
+  }
 }
 
