--- a/src/Pages/Sobre/Sobre.module.scss
+++ b/src/Pages/Sobre/Sobre.module.scss
@@ -33,7 +33,8 @@
             }
 
             p {
-                font-size: 22px;
+                font-size: 16px;
+                line-height: 1.6;
                 line-height: 32px;
                 padding: 0 15px;
             }
