--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -6,10 +6,14 @@
   min-height: 90vh;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  gap: 48px;
+  padding: 64px 6%;
 
   img {
-    height: 350px;
+    height: auto;
+    max-width: 45%;
+    object-fit: contain;
   }
 
   h1 {
@@ -48,9 +52,14 @@
 @media (max-width: 768px){
   .home {
     flex-direction: column;
+    text-align: center;
+    gap: 32px;
+    padding: 48px 24px;
+
 
     img {
-      height: 300px;
+      max-width: 70%;
+      height: auto;
     }
   }
 }
