--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -6,9 +6,8 @@
   min-height: 90vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   gap: 48px;
-  padding: 64px 6%;
 
   img {
     height: auto;
