--- a/src/Pages/Contatos/Contatos.module.scss
+++ b/src/Pages/Contatos/Contatos.module.scss
@@ -61,11 +61,14 @@
 }
 
 @media (max-width: 480px) {
-  p {
+  .contatos{
+    p {
     font-size: 16px;
   }
 
   h1 {
     font-size: 26px;
   }
+  }
+  
 }
